--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   "version": "1.0.0",
   "description": "Esse repositório é uma clonagem de um sistema chamado de tabnews",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "^3.6.2"
+  },
   "scripts": {
-    "dev" : "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT"
